Revert "Seed node and text fix update"
This reverts commit c06cba33b8f1a1ac78c269a24969f7ea6b217ab0.

--- a/contrib/debian/manpages/spectrumxd.1
+++ b/contrib/debian/manpages/spectrumxd.1
@@ -84,14 +84,14 @@ This help message
 \fBbackupwallet 'destination'\fR
 Safely copies *wallet.dat* to 'destination', which can be a directory or a path with filename.
 .TP
-\fBgetaccount 'speaddress'\fR
+\fBgetaccount 'bitgaddress'\fR
 Returns the account associated with the given address.
 .TP
-\fBsetaccount 'speaddress' ['account']\fR
+\fBsetaccount 'bitgaddress' ['account']\fR
 Sets the ['account'] associated with the given address. ['account'] may be omitted to remove an address from ['account'].
 .TP
 \fBgetaccountaddress 'account'\fR
-Returns a new spe address for 'account'.
+Returns a new bitg address for 'account'.
 .TP
 \fBgetaddressesbyaccount 'account'\fR
 Returns the list of addresses associated with the given 'account'.
@@ -112,7 +112,7 @@ Returns the number of connections to other nodes.
 Returns the proof-of-work difficulty as a multiple of the minimum difficulty.
 .TP
 \fBgetgenerate\fR
-Returns boolean true if server is trying to generate SPE, false otherwise.
+Returns boolean true if server is trying to generate REL, false otherwise.
 .TP
 \fBsetgenerate 'generate' ['genproclimit']\fR
 Generation is limited to ['genproclimit'] processors, \-1 is unlimited.
@@ -124,13 +124,13 @@ Returns a recent hashes per second performance measurement while generating.
 Returns an object containing server information.
 .TP
 \fBgetnewaddress 'account'\fR
-Returns a new spe address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
+Returns a new bitg address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
 .TP
 \fBgetreceivedbyaccount 'account' ['minconf=1']\fR
 Returns the total amount received by addresses associated with 'account' in transactions with at least ['minconf'] confirmations.
 .TP
-\fBgetreceivedbyaddress 'speaddress' ['minconf=1']\fR
-Returns the total amount received by 'speaddress' in transactions with at least ['minconf'] confirmations.
+\fBgetreceivedbyaddress 'bitgaddress' ['minconf=1']\fR
+Returns the total amount received by 'bitgaddress' in transactions with at least ['minconf'] confirmations.
 .TP
 \fBgettransaction 'txid'\fR
 Returns information about a specific transaction, given hexadecimal transaction ID.
@@ -148,7 +148,7 @@ List commands, or get help for a command.
 .TP
 \fBlistaccounts ['minconf=1']\fR
 List accounts and their current balances.
-     *note: requires spe 1.0.0.1 or later.
+     *note: requires bitg 1.0.0.1 or later.
 .TP
 \fBlistreceivedbyaccount ['minconf=1'] ['includeempty=false']\fR
 ['minconf'] is the minimum number of confirmations before payments are included. ['includeempty'] whether to include addresses that haven't received any payments. Returns an array of objects containing:
@@ -182,21 +182,21 @@ Returns a list of the last ['count'] transactions for 'account' \- for all accou
 \fBmove <'fromaccount'> <'toaccount'> <'amount'> ['minconf=1'] ['comment']\fR
 Moves funds between accounts.
 .TP
-\fBsendfrom* <'account'> <'speaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
-Sends amount from account's balance to 'speaddress'. This method will fail if there is less than amount SPE with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
+\fBsendfrom* <'account'> <'bitgaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
+Sends amount from account's balance to 'bitgaddress'. This method will fail if there is less than amount REL with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
 .TP
-\fBsendtoaddress 'speaddress' 'amount' ['comment'] ['comment-to']\fR
-Sends amount from the server's available balance to 'speaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
+\fBsendtoaddress 'bitgaddress' 'amount' ['comment'] ['comment-to']\fR
+Sends amount from the server's available balance to 'bitgaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
 .TP
 \fBstop\fR
 Stops the spectrumx server.
 .TP
-\fBvalidateaddress 'speaddress'\fR
-Checks that 'speaddress' looks like a proper spe address. Returns an object containing:
+\fBvalidateaddress 'bitgaddress'\fR
+Checks that 'bitgaddress' looks like a proper bitg address. Returns an object containing:
 
     "isvalid" : true or false.
     "ismine"  : true if the address is in the server's wallet.
-    "address" : speaddress.
+    "address" : bitgaddress.
 
     *note: ismine and address are only returned if the address is valid.
 
